# mcp-shell-server

./: README-1McpServers1.md  README-2McpServers2.md  README-3.1McpClient-OpenAiAgent vs LangChainAdapter.md  README-3.3McpClient.md  README-4.1MCPServerWithAuth0TodoApi.md  README-4.2MCPServerWithAuth0RemoteMcpServer.md  README-51FastMcpInterview.docx  README-5FastMcpInterview.md  README-McpArchitecture.md  README-McpClient1.md  README-McpServers.md  README-McpServers1.md  README-McpServers2.md  React_prompt_sample.txt  claude_config.json  mcpPySdkREADME.md  postman_conf.json  weather.bat
auth0/: package-lock.json
mcp-adapters/: main.py  pyproject.toml  testOpenAI.py
mcp-adapters/servers/: math_server.py  weather_server.py  weather_server_conf.json
mcp-shell-server/: Dockerfile  mcp_config.json  pyproject.toml  server.py
remote-mcp-auth0/mcp-auth0-oidc/: package-lock.json
remote-mcp-auth0/todos-api/: package-lock.json
